//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  user_id String [pk]
  fullName String [not null]
  username String [unique, not null]
  password_hashed String [not null]
  salt String [not null, default: '']
  email String [unique, not null]
  phone_number String
  farms Farm [not null]
}

Table Farm {
  id String [pk]
  name String [not null]
  establishedAt DateTime [not null]
  description String
  size Float [not null]
  address String [not null]
  userId String [not null]
  user user [not null]
  areas Area [not null]
}

Table Area {
  id String [pk]
  name String [not null]
  size Float [not null]
  farmId String [not null]
  farm Farm [not null]
  records Record [not null]
  devices DeviceLog [not null]
  schedules Schedule [not null]
  plantedCrops PlantedCrop [not null]
}

Table Crop {
  id String [pk]
  name String [not null]
  notes String
  seasonTime String
  plantedCrops PlantedCrop [not null]
}

Table PlantedCrop {
  areaId String [not null]
  cropId String [not null]
  quantity Int [not null]
  area Area [not null]
  crop Crop [not null]

  indexes {
    (areaId, cropId) [pk]
  }
}

Table DeviceLog {
  id String [pk]
  action String [not null]
  timestamp DateTime [not null]
  deviceType String [not null]
  note String
  areaId String [not null]
  area Area [not null]
}

Table Record {
  id String [pk]
  timestamp DateTime [not null]
  light Float [not null]
  temperature Float [not null]
  humidity Float [not null]
  soilMoisture Float [not null]
  areaId String [not null]
  area Area [not null]
}

Table Schedule {
  id String [pk]
  startTime DateTime [not null]
  endTime DateTime [not null]
  frequency String [not null]
  activity String [not null]
  updatedAt DateTime [default: `now()`, not null]
  areaId String [not null]
  area Area [not null]
}

Ref: Farm.userId > user.user_id

Ref: Area.farmId > Farm.id

Ref: PlantedCrop.areaId > Area.id [delete: Cascade]

Ref: PlantedCrop.cropId > Crop.id [delete: Cascade]

Ref: DeviceLog.areaId > Area.id

Ref: Record.areaId > Area.id

Ref: Schedule.areaId > Area.id